# jsip-exchange

./: .gitignore  CLAUDE.md  dune-project  jsip-exchange.opam  symbol_lookup_after.txt  symbol_lookup_before.txt  symbol_lookup_by_id.txt
.github/workflows/: ci.yml
app/bots/src/: book_filler.ml  cancel_storm.ml  market_maker_bot.ml  market_maker_bot.mli  spammer_bot.ml  tick_trader.ml
app/bots/test/: dune  test_bots.ml
app/dashboard/assets/: dune  jsip_dashboard_assets.ml  jsip_dashboard_assets.mli
app/dashboard/client/: dune  index.html  main.ml  styles.ml  web_app.ml
app/dashboard/src/: controller.ml  controller.mli  dune
app/dashboard/test/: dune  test_controller.ml
app/market_maker/src/: market_maker.ml  market_maker.mli  market_maker_bot.ml  market_maker_bot.mli
app/market_maker/test/: dune  test_market_maker.ml  test_market_maker_bot.ml
app/monitor/src/: controller.ml  controller.mli  event_log.ml  event_log.mli  term_app.ml  term_app.mli
app/monitor/test/: dune  test_controller.ml  test_event_log.ml
app/scenario_runner/src/: dune  runner.ml  runner.mli
app/scenarios/src/: slow_consumers.ml
dev/bench/: data.js
doc/: exercises-part-2.md  exercises-week-1.md
lib/bot_runtime/src/: bot_runtime.ml  bot_runtime.mli
lib/bot_runtime/test/: dune  test_bot_runtime.ml
lib/gateway/src/: dispatcher.ml  dispatcher.mli  dune  exchange_command.ml  exchange_command.mli  exchange_server.ml  exchange_server.mli  session.ml  (+13 more)
performance/src/: allocations.ml  dune  jsip_exchange_perf_lib.ml  replay.ml  replay.mli  sequences.ml  workload.ml  workload.mli
(+48 files in other folders)
